corrected page title

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	gtag('config', 'UA-156517751-5');
 	</script>
 
-	<link rel="icon" href="images/girl.png">
-    <title>Tatiana Tian | Home</title>
+	<link rel="icon" href="images/logo.png">
+    <title>Haloy Recommends</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
