added custom url

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</script>
 
 	<link rel="icon" href="images/logo.png">
-    <title>Haloy Recommends</title>
+    <title>Haloy Endorses</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
