--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</script>
 
 	<link rel="icon" href="images/logo.png">
-    <title>Haloy Endorses</title>
+    <title>Haloy Discovers | Promo Code</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -150,21 +150,35 @@
 					<div class="">
 						<br/>
 						<br/>
-						<Img src="./images/logo.png" style="height:120px">
-						<h1 class="title" style="color:#ee6f57; text-align: center;" ><b>Hi there! 👋</b></h1>
-						<h4 style="margin-left: 10px; margin-right: 10px;">Exclusive promo code for every product 🛍️</h4>
+						<Img src="./images/logo.png" style="height:80px; margin-bottom:30px">
+							  
+						<h1 class="title" style="color:#FB5D64; text-align: center;" ><b>Hi there! 👋</b></h1>
+						<h5 style="margin-left: 30px; margin-right: 30px; padding-left: 20px; padding-right: 20px; padding-top: 10px; padding-bottom: 10px; font-weight:bold; color:#1F1F1F; background-color: #FFF951; border-radius: 10px; font-size: medium;">Exclusive promo code for every product 🛍️</h5>
 					</div>
 					<br/>
 					<br/>
 					<div class="row">
-						<div class="col-md-4">
-							<a target="_blank" href="https://www.amazon.com/gp/product/B0899S86FG/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B0899S86FG&linkCode=as2&tag=amazondea0fb7-20&linkId=914c36fa97633d4c57a69c71d7a54f43"> <Img src="./images/earbud.png" style="height:250px"> <br/>Wireless Bluetooth Earbuds <br/> 10% Promo Code: <b>10OFF</b></a><img src="//ir-na.amazon-adsystem.com/e/ir?t=amazondea0fb7-20&l=am2&o=1&a=B0899S86FG" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+						<div class="col-md-4" style="margin-left:20px; margin-right:20px">
+							<a target="_blank" href="https://www.amazon.com/gp/product/B0899S86FG/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B0899S86FG&linkCode=as2&tag=amazondea0fb7-20&linkId=914c36fa97633d4c57a69c71d7a54f43"> <Img src="./images/earbud.png" style="height:200px"> 
+								<br/>
+								<div style="background-color: #ffeebb; margin-left: 30px; margin-right: 30px; padding-top: 5px; padding-bottom: 5px; border-radius: 10px">
+									<span style="color:#1F1F1F"><u>Wireless Bluetooth Earbuds <br/> 10% Promo Code: <b>10OFF</b></u></span>
+								</div>
+							</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=amazondea0fb7-20&l=am2&o=1&a=B0899S86FG" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 						</div>
-						<div class="col-md-4">
-							<a target="_blank" href="https://www.amazon.com/gp/product/B08HHB4RSZ/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B08HHB4RSZ&linkCode=as2&tag=amazondea0fb7-20&linkId=a7ae3c62a7b8cc4209aa9da1d7548f4e"> <Img src="./images/mask.png" style="height:250px"> <br/>Bandana Face Mask Neck Gaiter, 4 Pcs <br/> 10% Promo Code: <b>10OFF</b></a><img src="//ir-na.amazon-adsystem.com/e/ir?t=amazondea0fb7-20&l=am2&o=1&a=B08HHB4RSZ" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+						<div class="col-md-4" style="margin-top: 40px; margin-left:20px; margin-right:20px">
+							<a target="_blank" href="https://www.amazon.com/gp/product/B08HHB4RSZ/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B08HHB4RSZ&linkCode=as2&tag=amazondea0fb7-20&linkId=a7ae3c62a7b8cc4209aa9da1d7548f4e"> <Img src="./images/mask.png" style="height:200px"> <br/>
+								<div style="background-color: #ffeebb; margin-left: 30px; margin-right: 30px; padding-top: 5px; padding-bottom: 5px; border-radius: 10px;">
+									<span style="color:#1F1F1F"><u>Bandana Face Mask, 4 Pcs <br/> 10% Promo Code: <b>10OFF</b></u></span>
+								</div>
+							</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=amazondea0fb7-20&l=am2&o=1&a=B08HHB4RSZ" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 						</div>
-						<div class="col-md-4">
-							<a target="_blank" href="https://www.amazon.com/gp/product/B08PVTXD96/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B08PVTXD96&linkCode=as2&tag=amazondea0fb7-20&linkId=75fdb3062bf9ed0172c95f1614ae0fa6"> <Img src="./images/pullupbar.png" style="height:250px"> <br/>Pull Up Bar with Ergonomic Grip <br/> 10% Promo Code: <b>10OFF</b></a><img src="//ir-na.amazon-adsystem.com/e/ir?t=amazondea0fb7-20&l=am2&o=1&a=B08PVTXD96" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
+						<div class="col-md-4" style="margin-top: 40px; margin-bottom: 120px; margin-left:20px; margin-right:20px">
+							<a target="_blank" href="https://www.amazon.com/gp/product/B08PVTXD96/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B08PVTXD96&linkCode=as2&tag=amazondea0fb7-20&linkId=75fdb3062bf9ed0172c95f1614ae0fa6"> <Img src="./images/pullupbar.png" style="height:200px"> <br/>
+								<div style="background-color: #ffeebb; margin-left: 30px; margin-right: 30px; padding-top: 5px; padding-bottom: 5px; border-radius: 10px;">
+									<span style="color:#1F1F1F"><u>Pull Up Bar with Ergonomic Grip <br/> 10% Promo Code: <b>10OFF</b></u></span>
+								</div>
+							</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=amazondea0fb7-20&l=am2&o=1&a=B08PVTXD96" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 						</div>
 					</div>
 				</div>
