--- a/index.html
+++ b/index.html
@@ -159,21 +159,21 @@
 						<div class="col-md-4" style="margin-top: 40px; padding-left:20px; padding-right:20px">
 							<a target="_blank" href="https://www.amazon.com/gp/product/B0899S86FG/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B0899S86FG&linkCode=as2&tag=amazondea0fb7-20&linkId=914c36fa97633d4c57a69c71d7a54f43"> <Img src="./images/earbud.png" style="height:200px"> 
 								<br/>
-								<div style="background-color: #ffeebb; margin-left: 30px; margin-right: 30px; padding-top: 5px; padding-bottom: 5px; border-radius: 10px">
+								<div style="background-color: #ffeebb; margin-left: 30px; margin-right: 30px; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; border-radius: 10px">
 									<span style="color:#1F1F1F"><u>Wireless Bluetooth Earbuds <br/> 10% Promo Code: <b>50MIDC83</b></u></span>
 								</div>
 							</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=amazondea0fb7-20&l=am2&o=1&a=B0899S86FG" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 						</div>
 						<div class="col-md-4" style="margin-top: 40px; padding-left:20px; padding-right:20px">
 							<a target="_blank" href="https://www.amazon.com/gp/product/B08HHB4RSZ/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B08HHB4RSZ&linkCode=as2&tag=amazondea0fb7-20&linkId=a7ae3c62a7b8cc4209aa9da1d7548f4e"> <Img src="./images/mask.png" style="height:200px"> <br/>
-								<div style="background-color: #ffeebb; margin-left: 30px; margin-right: 30px; padding-top: 5px; padding-bottom: 5px; border-radius: 10px;">
+								<div style="background-color: #ffeebb; margin-left: 30px; margin-right: 30px; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; border-radius: 10px;">
 									<span style="color:#1F1F1F"><u>Bandana Face Mask, 4 Pcs <br/> 10% Promo Code: <b>50OUWAPP</b></u></span>
 								</div>
 							</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=amazondea0fb7-20&l=am2&o=1&a=B08HHB4RSZ" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
 						</div>
 						<div class="col-md-4" style="margin-top: 40px; margin-bottom: 120px; padding-left:20px; padding-right:20px">
 							<a target="_blank" href="https://www.amazon.com/gp/product/B08PVTXD96/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B08PVTXD96&linkCode=as2&tag=amazondea0fb7-20&linkId=75fdb3062bf9ed0172c95f1614ae0fa6"> <Img src="./images/pullupbar.png" style="height:200px"> <br/>
-								<div style="background-color: #ffeebb; margin-left: 30px; margin-right: 30px; padding-top: 5px; padding-bottom: 5px; border-radius: 10px;">
+								<div style="background-color: #ffeebb; margin-left: 30px; margin-right: 30px; padding-top: 5px; padding-bottom: 5px; padding-left: 5px; padding-right: 5px; border-radius: 10px;">
 									<span style="color:#1F1F1F"><u>Pull Up Bar with Ergonomic Grip <br/> 10% Promo Code: <b>NOZJBJON</b></u></span>
 								</div>
 							</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=amazondea0fb7-20&l=am2&o=1&a=B08PVTXD96" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />
